--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ $RECYCLE.BIN/
 *.log
 *.sql
 *.sqlite
+*.sqlite3
 
 
 ############################
@@ -76,10 +77,11 @@ $RECYCLE.BIN/
 ############################
 
 *#
+ssl
 .idea
 nbproject
-.vscode/
-
+public/uploads/*
+!public/uploads/.gitkeep
 
 ############################
 # Node.js
@@ -90,14 +92,8 @@ lcov.info
 pids
 logs
 results
-build
 node_modules
 .node_history
-package-lock.json
-**/package-lock.json
-!docs/package-lock.json
-*.heapsnapshot
-
 
 ############################
 # Tests
@@ -105,34 +101,15 @@ package-lock.json
 
 testApp
 coverage
-cypress/screenshots
-cypress/videos
-
 
 ############################
-# Documentation
+# Strapi
 ############################
 
+.env
+license.txt
+exports
+*.cache
 dist
-
-############################
-# Builds
-############################
-
-packages/generators/app/files/public/
-schema.graphql
-
-############################
-# Example app
-############################
-
-.dev
-# *.cache
-
-############################
-# Visual Studio Code
-############################
-
-front-workspace.code-workspace
-.yarn
-.yarnrc
+build
+.strapi-updater.json
