--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@strapi/plugin-i18n": "4.4.7",
     "@strapi/plugin-users-permissions": "4.4.7",
     "@strapi/strapi": "4.4.7",
-    "better-sqlite3": "7.4.6"
+    "@strapi/utils": "^4.4.7",
+    "better-sqlite3": "7.4.6",
+    "pg": "^8.8.0"
   },
   "author": {
     "name": "A Strapi developer"
